<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayoutPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.acolhe.app.MainActivity">


    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment"
        android:name="com.acolhe.app.fragments.Home"
        android:paddingVertical="68dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_color"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/lnrLytHome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgVwHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descricaoImagemHome"
                app:srcCompat="@drawable/home" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnrLytConteudo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgVwConteudo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descricaoImagemConteudo"
                app:srcCompat="@drawable/play" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnrLytCvv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgVwCvv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descricaoImagemCvv"
                app:srcCompat="@drawable/acolhegrande" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnrLytMissao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgVwMissao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descricaoImagemMissoes"
                app:srcCompat="@drawable/lista" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/lnrLytLoja"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgVwLoja"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/descricaoImagemLoja"
                app:srcCompat="@drawable/mochila" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_color"
        android:minHeight="68dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/lnrLytVoltar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/setinhavoltarmenuprincipal"
                android:layout_width="35dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/descricaoImagemPerfil"
                app:srcCompat="@drawable/carinha" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtVwNomePagina"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="9"
            android:clickable="true"
            android:fontFamily="@font/paytone_one"
            android:gravity="center_vertical"
            android:text="@string/page_name_home"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lnrLytOfensiva"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgVwOfensiva"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:contentDescription="@string/descricaoImagemOfensiva"
                app:srcCompat="@drawable/loginho" />

            <TextView
                android:id="@+id/valorOfensiva"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/paytone_one"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:text="@string/valorDefaultOfensiva"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnrLytMedalha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:clickable="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgVwMoeda"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="1dp"
                android:layout_weight="1.1"
                android:contentDescription="@string/descricaoImagemMedalha"
                app:srcCompat="@drawable/medal" />

            <TextView
                android:id="@+id/valorSaldo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/paytone_one"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:text="@string/valorDefaultOfensiva"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnrLytAcolhePlus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgVwAcolhePlus"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/descricaoImagemAcolhePlus"
                app:srcCompat="@drawable/subs" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>