<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context="com.acolhe.app.ClinicasActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header_color"
        android:orientation="horizontal"
        android:paddingVertical="15dp">


        <LinearLayout
            android:id="@+id/lnrLytVoltar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgVwPerfil"
                android:layout_width="35dp"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_weight="1"
                android:contentDescription="@string/descricaoImagemPerfil"
                app:srcCompat="@drawable/setabranca" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtVwNomePagina"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="9"
            android:clickable="true"
            android:fontFamily="@font/paytone_one"
            android:gravity="center_vertical"
            android:text="@string/nomePaginaClinica"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lnrLytOfensiva"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:clickable="true"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/imgVwOfensiva"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:contentDescription="@string/descricaoImagemOfensiva"
                app:srcCompat="@drawable/loginho" />

            <TextView
                android:id="@+id/valorOfensiva"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/paytone_one"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:text="@string/valorDefaultOfensiva"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnrLytMedalha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:clickable="true"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/imgVwMoeda"
                android:layout_width="15dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="1dp"
                android:layout_weight="1.1"
                android:contentDescription="@string/descricaoImagemMedalha"
                app:srcCompat="@drawable/medal" />

            <TextView
                android:id="@+id/valorSaldo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/paytone_one"
                android:gravity="center_vertical"
                android:paddingStart="5dp"
                android:text="@string/valorDefaultOfensiva"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lnrLytAcolhePlus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgVwAcolhePlus"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:clickable="true"
                android:contentDescription="@string/descricaoImagemAcolhePlus"
                app:srcCompat="@drawable/subs" />
        </LinearLayout>

    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtVwTituloClinicas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tituloClinicas"
                android:textColor="@color/secondary_color"
                android:textSize="48sp"
                android:textStyle="bold"
                app:lineHeight="45sp" />

            <TextView
                android:id="@+id/txtVwSubtituloClinicas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="18dp"
                android:fontFamily="sans-serif"
                android:text="@string/subtituloClinicas"
                android:textColor="@color/background_colorInicial"
                android:textSize="16sp"
                android:textStyle="bold" />


            <ListView
                android:id="@+id/lstVwClinicas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"  />

        </LinearLayout>

</LinearLayout>