<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_linear"
    tools:context="com.acolhe.app.PaginaAcolhePlus">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteY="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="68dp"
                android:layout_height="26dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                app:srcCompat="@drawable/imagemplus" />

            <ImageView
                android:id="@+id/headerImage"
                android:layout_width="114.83dp"
                android:layout_height="169dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/ursoplusum" />

            <TextView
                android:id="@+id/headerText"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/paytone_one"
                android:text="@string/acolhe_plus"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="#FFFFFF"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/itemList"
                android:layout_width="333dp"
                android:layout_height="356dp"
                android:background="#306A83">

            </androidx.recyclerview.widget.RecyclerView>

            <ImageView
                android:id="@+id/footerImage"
                android:layout_width="135dp"
                android:layout_height="176dp"
                android:layout_margin="30dp"
                android:src="@drawable/ursoplusdois" />

            <TextView
                android:id="@+id/footerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:fontFamily="@font/paytone_one"
                android:text="@string/canceleAssinaturaTitulo"
                android:textAlignment="center"
                android:textColor="#E6E6E6"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/footerSubtitle"
                android:layout_width="301dp"
                android:layout_height="34dp"
                android:layout_marginBottom="150dp"
                android:text="@string/canceleAssinatura"
                android:textAlignment="center"
                android:textColor="#F4F4F4"
                android:textSize="12sp" />

        </LinearLayout>
    </ScrollView>

    <!-- Menu fixo na parte inferior -->

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#092835"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/subscribeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/primary_color"
            android:clickable="true"
            android:fontFamily="@font/paytone_one"
            android:onClick="salvar"
            android:text="@string/assineja"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:cornerRadius="10dp" />

        <TextView
            android:id="@+id/noThanksButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/paytone_one"
            android:text="@string/naoObrigado"
            android:textColor="#818181"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
